app/styles/devoxx.css
/** BEGIN CSS from bootstrap */
.dropdown {
    background-color: #fff;
}

.dropdown-menu li {
    padding: 0;
    margin: 0;
}

.dropdown-menu li a {
    padding: 10px;
    margin: 0;
    display: inline-block;
}

.dropdown-menu li.active {
    background-color: #F5AF33;
}

.dropdown-menu li.active a {
    color: #000;
}

.clearfix {
    *zoom: 1;
}

.clearfix:before,
.clearfix:after {
    display: table;
    content: "";
    line-height: 0;
}

.clearfix:after {
    clear: both;
}

.hide-text {
    font: 0/0 a;
    color: transparent;
    text-shadow: none;
    background-color: transparent;
    border: 0;
}

.input-block-level {
    display: block;
    width: 100%;
    min-height: 30px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.modal-backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1040;
    background-color: #000000;
}

.modal-backdrop.fade {
    opacity: 0;
}

.modal-backdrop,
.modal-backdrop.fade.in {
    opacity: 0.8;
    filter: alpha(opacity=80);
}

.modal {
    position: fixed;
    top: 10%;
    left: 50%;
    z-index: 1050;
    width: 560px;
    margin-left: -280px;
    background-color: #ffffff;
    border: 1px solid #999;
    border: 1px solid rgba(0, 0, 0, 0.3);
    *border: 1px solid #999;
    /* IE6-7 */

    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding-box;
    background-clip: padding-box;
    outline: none;
}

.modal.fade {
    -webkit-transition: opacity .3s linear, top .3s ease-out;
    -moz-transition: opacity .3s linear, top .3s ease-out;
    -o-transition: opacity .3s linear, top .3s ease-out;
    transition: opacity .3s linear, top .3s ease-out;
    top: -25%;
}

.modal.fade.in {
    top: 10%;
}

.modal-header {
    padding: 9px 15px;
    border-bottom: 1px solid #eee;
}

.modal-header .close {
    margin-top: 2px;
}

.modal-header h3 {
    margin: 0;
    line-height: 30px;
}

.modal-body {
    position: relative;
    overflow-y: auto;
    max-height: 400px;
    padding: 15px;
}

.modal-form {
    margin-bottom: 0;
}

.modal-footer {
    padding: 14px 15px 15px;
    margin-bottom: 0;
    text-align: right;
    background-color: #f5f5f5;
    border-top: 1px solid #ddd;
    -webkit-border-radius: 0 0 6px 6px;
    -moz-border-radius: 0 0 6px 6px;
    border-radius: 0 0 6px 6px;
    -webkit-box-shadow: inset 0 1px 0 #ffffff;
    -moz-box-shadow: inset 0 1px 0 #ffffff;
    box-shadow: inset 0 1px 0 #ffffff;
    *zoom: 1;
}

.modal-footer:before,
.modal-footer:after {
    display: table;
    content: "";
    line-height: 0;
}

.modal-footer:after {
    clear: both;
}

.modal-footer .btn + .btn {
    margin-left: 5px;
    margin-bottom: 0;
}

.modal-footer .btn-group .btn + .btn {
    margin-left: -1px;
}

.modal-footer .btn-block + .btn-block {
    margin-left: 0;
}

/** END CSS from bootstrap */

.table {
    width: 100%;
}

.table th, .table td {
    text-align: center;
    padding: 5px;
    height: 70px;
}

.table th {
    text-transform: uppercase;
}

.table tr:nth-child(odd) td {
    background-color: #eee;
}

.table .col1 {
    width: 23%;
}

.table .col2 {
    width: 110px;
}

.table .col3 {
    width: 360px;
    white-space: nowrap;
}
.table td.col3 a {
    width: 60px;
}

div.selector.ng-invalid,
div.checker.ng-invalid,
input.ng-invalid,
textarea.ng-invalid {
    box-shadow: 0 0 3px 1px #f00;
    color: #f00;
}

div.selector.ng-invalid {
    border-radius: 3px;
}


/* 360 CSS Overrides */

#tracks.area {
    padding: 0;
    padding-top: 100px;
}

#tracks .btn {
    background-color: #000;
    background-position: 36px 15px;
    color: #fff;
}

#tracks .btn:hover {
    background-color: #fff;
    color: #000;
}

#news li p a {
    color: #52b5bb;
    display: inline;
}

#carousel .content p {
    font-size: 18px;
}


#tweetwall ul li .visual {
    height: 120px !important;
    width: 120px !important;    
    -webkit-border-radius: 50% !important;
    border-radius: 50% !important;
}

#tweetwall .visual {
    background-size: 120px !important; 
}

#tweetwall .tweet {
    cursor: pointer;
}

#tweetwall ul li .tweet {
    margin: 0 60px 0 200px !important;
}

#tweetwall ul li.even .tweet {
    margin: 0 200px 0 60px !important;
}

.visible {
    display: block !important;
}

.terms li {
    list-style: decimal;
    list-style-position: inside;
    margin: 20px;
}

.modal.terms,
.modal.speaker {
    width: 800px;
    margin-left: -400px;
}

a {
    cursor: pointer;
}

.container .speakerIcon {
    display: block;
    background-size: 100px;
    background: #f8cb7a;
    height: 100px;
    line-height: 100px;
    border: 2px solid #fff;
    text-align: center;
    width: 100px;
    -webkit-border-radius: 50px;
    border-radius: 50px;
    transition: all 0.15s ease-out 0s;
    -webkit-transition: all 0.15s ease-out 0s;

}


/* Flexible iFrame for Google Maps */

.Flexible-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}

.Flexible-container iframe,   
.Flexible-container object,  
.Flexible-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/* Bootstrap Style Alerts */

.alert {
  padding: 8px 35px 8px 14px;
  margin-bottom: 20px;
  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
  background-color: #fcf8e3;
  border: 1px solid #fbeed5;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}

.alert,
.alert h4 {
  color: #c09853;
}

.alert h4 {
  margin: 0;
}

.alert .close {
  position: relative;
  top: -2px;
  right: -21px;
  line-height: 20px;
}

.alert-success {
  color: #468847;
  background-color: #dff0d8;
  border-color: #d6e9c6;
}

.alert-success h4 {
  color: #468847;
}

.alert-danger,
.alert-error {
  color: #b94a48;
  background-color: #f2dede;
  border-color: #eed3d7;
}

.alert-danger h4,
.alert-error h4 {
  color: #b94a48;
}

.alert-info {
  color: #3a87ad;
  background-color: #d9edf7;
  border-color: #bce8f1;
}

.alert-info h4 {
  color: #3a87ad;
}

a.btn_edit {
    background: url(../images/btn_edit.png) no-repeat 10px;
    color: #000;
    display: inline-block;
    padding: 40px 25px 25px 25px;
}
a.btn_edit:hover {
    background-color: #f5af33;
}
a.btn_delete {
    background: url(../images/btn_delete.png) no-repeat 10px;
    color: #000;
    display: inline-block;
    padding: 40px 20px 25px 35px;
}
a.btn_delete:hover {
    background-color: #f5af33;
}
#sponsors {
    padding-top: 20px;
    padding-bottom: 20px;
}
#sponsors .img_wrapper {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
}

li.newTag {
    color: #b94a48;
    background-color: #f2dede;
    border-color: #eed3d7;
}

li.existingTag {
    border-color: #ccc;
}

.tooltip ul, .tooltip li{
  pposition:relative;
  margin:0;
  width:100%;
  padding:0;
}

.tooltip {
  position: absolute;
  z-index: 1030;
  display: block;
  font-size: 11px;
  line-height: 1.4;
  opacity: 0;
  filter: alpha(opacity=0);
  visibility: visible;
}

.tooltip.in {
  opacity: 0.8;
  filter: alpha(opacity=80);
}

.tooltip.top {
  padding: 5px 0;
  margin-top: -3px;
}

.tooltip.right {
  padding: 0 5px;
  margin-left: 3px;
}

.tooltip.bottom {
  padding: 5px 0;
  margin-top: 3px;
}

.tooltip.left {
  padding: 0 5px;
  margin-left: -3px;
}

.tooltip-inner {
  max-width: 200px;
  padding: 8px;
  color: #ffffff;
  text-align: center;
  text-decoration: none;
  background-color: #000000;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}

.tooltip-arrow {
  position: absolute;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.tooltip.top .tooltip-arrow {
  bottom: 0;
  left: 50%;
  margin-left: -5px;
  border-top-color: #000000;
  border-width: 5px 5px 0;
}

.tooltip.right .tooltip-arrow {
  top: 50%;
  left: 0;
  margin-top: -5px;
  border-right-color: #000000;
  border-width: 5px 5px 5px 0;
}

.tooltip.left .tooltip-arrow {
  top: 50%;
  right: 0;
  margin-top: -5px;
  border-left-color: #000000;
  border-width: 5px 0 5px 5px;
}

.tooltip.bottom .tooltip-arrow {
  top: 0;
  left: 50%;
  margin-left: -5px;
  border-bottom-color: #000000;
  border-width: 0 5px 5px;
}

/* Static Speakers page */

.filtertracks a.selected .icon > div {
  opacity:1;
  filter:alpha(opacity=100);
}
.filtertracks a .icon > div {
  width: 35px;
  height: 35px;
  opacity:0.4;
  filter:alpha(opacity=40);
  background-size: 35px 35px;
}

/* Fix for ipad width */

.filtertracks a {
  width: 110px !important;
}

#contactList li .popup { 
  padding: 20px 20px 0 !important;
}
#contactList li {
  width: 240px !important;
}

/* Static Speaker page */

#detail .speakerpic img {
  width: 180px;
  height: 180px;
}

#detail p {
  text-align: justify;
}

.headerfilter div.icon > div {
  width: 89px;
  height: 89px;
  background-size: 89px 89px;
}

.talks .icon > div {
  width: 45px;
  height: 45px;
  background-size: 45px 45px;
  margin: 18px auto 0;
}

#sheduleDays .talks .row {
    font: 12px/17px "GothamBook","Helvetica Neue",Arial,Helvetica,Geneva,sans-serif !important;
    padding: 33px 0 20px !important;
}

#sheduleDays .talks .row .speakerpic,
#sheduleDays .talks .row .icon { 
  margin: -20px 20px 0 0 !important;
}

.banner {
  max-width: inherit !important;
  background-size: 315px !important; 
  text-align: justify;
}

.banner .speakerpic {
  margin: 20px 30px !important;
}

#detail .banner h4 {
  text-align: left;
  line-height: 39px;
  margin-bottom: -5px !important;
}

#detail .links a {
  background: url(../images/icons_shares.png) no-repeat 0 0;
  display: inline-block;
  height: 39px;
  margin: 5px 10px 0;
  text-indent: -9999px;
  width: 39px;
}

#detail .links a.btn_twitter {
  background-position: -48px 0;
}

/* Static pages track icons */

.icon_architecture {
  background-image: url('/images/tracks/icon_architecture.png');
}
.icon_alternative {
  background-image: url('/images/tracks/icon_alternative.png');
}
.icon_methodology {
  background-image: url('/images/tracks/icon_methology.png');
}
.icon_cloud {
  background-image: url('/images/tracks/icon_cloud.png');
}
.icon_javase {
  background-image: url('/images/tracks/icon_javase.png');
}
.icon_mobile {
  background-image: url('/images/tracks/icon_mobile.png');
}
.icon_javaee {
  background-image: url('/images/tracks/icon_javaee.png');
}
.icon_future {
  background-image: url('/images/tracks/icon_future.png');
}
.icon_web {
  background-image: url('/images/tracks/icon_web.png');
}

